# neuro_control_project

./: .gitignore  Adaptive Control of Robot Manipulators_README.md  CMakeLists.txt  README.md  extracted_pdf.txt  main.cpp  neuro_sim
adaptive_control_update_law_modularity/: Adaptive Control of Robot Manipulators_README.md  Math_Concepts_to_Code_Mapping.md  interactive_tune.py  main.cpp
